src/snapshot_middleware/snapshots/librojo__snapshot_middleware__meta_file__test__adjacent_read_jsonc.snap
---
source: src/snapshot_middleware/meta_file.rs
expression: snapshot
---
snapshot_id: "00000000000000000000000000000000"
metadata:
  ignore_unknown_instances: false
  relevant_paths:
    - /foo/bar.meta.json
    - /foo/bar.meta.jsonc
  context:
    emit_legacy_scripts: true
    decode_windows_invalid_chars: false
  specified_id: manually specified
  middleware: ~
  schema: ~
name: DEFAULT
class_name: DEFAULT
properties: {}
children: []
